# Skillnir

./: .gitignore  .pre-commit-config.yaml  .pylintrc  ASSETS.md  CHANGELOG.md  CONTRIBUTING.md  INJECT.md  LICENSE  OWNERS  README.md  agents.md  pyproject.toml
.agent/skills/: frontendEngineer
.claude/skills/: skillnir
.codex/skills/: devopsEngineer
.cursor/skills/: promptCompressor
.data/promptsv1/: _base-skill-generator.md  compress-docs-tone.md  generate-ai-docs.md  generate-rule-general.md  generate-skill-accessibility.md  generate-skill-android-google.md  generate-skill-android.md  generate-skill-api-design.md  generate-skill-appium.md  generate-skill-automation-review.md  generate-skill-backend.md  generate-skill-chrome-extension.md  generate-skill-cross-platform-mobile.md  generate-skill-data-science.md  generate-skill-database.md  generate-skill-deep-researcher.md  generate-skill-devops-engineer.md  generate-skill-django.md  generate-skill-financial-manager.md  generate-skill-frontend.md  generate-skill-general-system.md  generate-skill-general.md  generate-skill-go.md  generate-skill-hr-manager.md  generate-skill-infra.md  generate-skill-ios.md  generate-skill-js.md  generate-skill-locator.md  generate-skill-manual-tester.md  generate-skill-migration.md  generate-skill-observability.md  generate-skill-performance.md  generate-skill-playwright.md  generate-skill-project-manager.md  generate-skill-python.md  generate-skill-security.md  generate-skill-selenium.md  generate-skill-test-design.md  generate-skill-testing.md  generate-skill-translator.md  (+4 more)
.gemini/skills/: securityEngineer
.github/: pull_request_template.md
.github/skills/: pythonDeveloper
.github/workflows/: auto-assign-author.yml  bump-version.yml  check-style.yml  run-tests.yml
.opencode/skills/: backendEngineer
scripts/: run_intel.py  test_cards.py
src/skillnir/: article_cleanup.py  article_status.py  backends.py  benchmarks.py  cli.py  compressor.py  crypto.py  docs_compressor.py  docs_optimizer.py  events.py  generator.py  hooks.py  i18n.py  injector.py  news.py  notifier.py  package_vulns.py  remover.py  researcher.py  rule_generator.py  scaffold.py  security.py  skill_generator.py  skill_validator.py  skills.py  software_researcher.py  syncer.py  testing_researcher.py  tools.py  usage.py  (+1 more)
tests/: conftest.py  test_article_cleanup.py  test_backends.py  test_compressor.py  test_crypto.py  test_docs_compressor.py  test_docs_optimizer.py  test_generator.py  test_hooks.py  test_ignore.py  test_injector.py  test_news.py  test_notifications_providers.py  test_notifications_senders.py  test_notifier.py  test_package_vulns.py  test_remover.py  test_rule_generator.py  test_scaffold.py  test_skill_generator.py  test_skill_validator.py  test_skills.py  test_software_researcher.py  test_syncer.py  test_testing_researcher.py  test_tools.py  test_ui_path_input.py  test_usage.py  test_wiki_generator.py
(+212 files in other folders)
