[project]
name = "skillnir"
version = "1.3.6"
description = "Inject AI coding skills into any tool's dotdir"
requires-python = ">=3.14"
dependencies = [
    "questionary>=2.1.0",
    "pyyaml>=6.0",
    "nicegui>=2.0.0",
    "claude-agent-sdk>=0.1.44",
    "cryptography>=45.0.0",
]

[project.optional-dependencies]
generate = ["claude-agent-sdk>=0.1.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
skillnir = "skillnir.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pylint>=4.0.5",
    "pytest-asyncio>=0.24",
]
