[project]
name = "skillnir"
version = "1.6.0"
description = "Inject AI coding skills into any tool's dotdir"
requires-python = ">=3.14"
dependencies = [
    "questionary>=2.1.0",
    "pyyaml>=6.0",
    "nicegui>=3.10.0",
    "claude-agent-sdk>=0.2.87",
    "cryptography>=46.0.7",
    "pytest-asyncio>=1.4.0",
]

[project.optional-dependencies]
generate = ["claude-agent-sdk>=0.1.44"]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.4.0"]

[project.scripts]
skillnir = "skillnir.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pylint>=4.0.5",
    "pytest-asyncio>=0.24",
]
